--- a/UserMaintenance/UserMaintenance/Resource1.resx
+++ b/UserMaintenance/UserMaintenance/Resource1.resx
@@ -123,4 +123,7 @@
   <data name="FullName" xml:space="preserve">
     <value>Teljesnév</value>
   </data>
+  <data name="Write" xml:space="preserve">
+    <value>Fáljba írás</value>
+  </data>
 </root>
